CUDA C++ Optimal/results/compilation_logs/compile_size_42_reg_32_20250612_2211.txt
========== COMPILATION START ========== 
Parameters: PARAMETR_SIZE=42, MAXREGCOUNT=32 
Compile command: nvcc -O3 -arch=sm_70 -std=c++17 -o aco_cuda_global_while.exe aco_cuda_global_while.cu -Xcompiler "/O2 /fp:fast /openmp /MT" -use_fast_math -lcudart -maxrregcount=32 -Xptxas "-O3,-v" --resource-usage 
 
aco_cuda_global_while.cu(265): warning #68-D: integer conversion resulted in a change of sign
          if (hashTable[idx].key == -1) return -1.0;
                                    ^

Remark: The warnings can be suppressed with "-diag-suppress <warning-number>"

aco_cuda_global_while.cu(276): warning #68-D: integer conversion resulted in a change of sign
          unsigned long long old = atomicCAS(&hashTable[idx].key, -1, key);
                                                                  ^

aco_cuda_global_while.cu(277): warning #68-D: integer conversion resulted in a change of sign
          if (old == -1 || old == key) {
                     ^

aco_cuda_global_while.cu(309): warning #68-D: integer conversion resulted in a change of sign
          hashTable[i].key = -1;
                             ^

aco_cuda_global_while.cu(490): error: identifier "parametr_size" is undefined
      double* agent_params = &global_params_buffer[ant_id * parametr_size];
                                                            ^

aco_cuda_global_while.cu(533): error: identifier "computeFastHash" is undefined
          unsigned int fast_hash = computeFastHash(&agent_node[ant_id * parametr_size], min(parametr_size, 16));
                                   ^

aco_cuda_global_while.cu(537): error: class "HashEntry" has no member "ant_id"
          if (hashTable[hash_idx].ant_id == ant_id &&
                                  ^

aco_cuda_global_while.cu(538): error: class "HashEntry" has no member "hash"
              hashTable[hash_idx].hash == fast_hash) {
                                  ^

aco_cuda_global_while.cu(544): error: identifier "BenchShafferaFunctionOptimized" is undefined
              OF[ant_id] = BenchShafferaFunctionOptimized(agent_params, parametr_size);
                           ^

aco_cuda_global_while.cu(547): error: class "HashEntry" has no member "ant_id"
              hashTable[hash_idx].ant_id = ant_id;
                                  ^

aco_cuda_global_while.cu(548): error: class "HashEntry" has no member "hash"
              hashTable[hash_idx].hash = fast_hash;
                                  ^

aco_cuda_global_while.cu(558): error: identifier "updateMinMax" is undefined
              updateMinMax(OF[ant_id], maxOf_dev, minOf_dev);
              ^

aco_cuda_global_while.cu(604): error: a __global__ function call must be configured
      computeProbabilities(pheromon, kol_enter, norm_matrix_probability);
      ^

aco_cuda_global_while.cu(1066): warning #549-D: variable "hash_fails" is used before its value is set
      metrics.hash_misses = hash_fails;
                            ^

aco_cuda_global_while.cu(1203): warning #549-D: variable "hash_fails" is used before its value is set
      metrics.hash_misses = hash_fails;
                            ^

aco_cuda_global_while.cu(1310): warning #549-D: variable "hash_fails" is used before its value is set
      metrics.hash_misses = hash_fails;
                            ^

9 errors detected in the compilation of "aco_cuda_global_while.cu".
aco_cuda_global_while.cu
========== COMPILATION END ========== 
Exit code: 2 
